*Empty MediaWiki Message*

--- a/2_jannewaori.mw
+++ b/2_jannewaori.mw
@@ -2,6 +2,9 @@
 De volgende gebeurtenissen vunnen of vienen plak op '''2 jannewaori'''
 
 == Gebeurtenissen ==
+
+* [[Winter van 1683-1684|1684]] - De zee bi'j [[Vlaanderen]] is twie [[mijl]] wied uut de kuste bevreuren.
+
 * [[1909]] - Eerste [[Elfstedentocht|Elfstedetocht]]. 
 * [[1999]] - Juan José Ibarretxe wodt beëdigd tot [[Baskelaand|Baskische]] minister-prissedent.
 
