--- a/17_jannewaori.mw
+++ b/17_jannewaori.mw
@@ -5,7 +5,8 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''17 jannewaori'''
 * [[1840]] - De Rippebliek van de Rio Grande verklaor onofhankelijkheid van [[Mexico (laand)|Mexico]]. 
 
 == Geboren ==
-* [[1706]] - [[Benjamin Franklin]], Amerikaanse [[poletiek|politicus]] en [[wetenschap]]per († [[1790]]) 
+* [[1684]] - Op de [[Theems]] wördt een [[Theems Frost Fair]] eholden vanweage et [[Winter van 1683-1684|slim kolde weer]]. 
+*[[1706]] - [[Benjamin Franklin]], Amerikaanse [[poletiek|politicus]] en [[wetenschap]]per († [[1790]]) 
 * [[1899]] - [[Al Capone]], Amerika's bekendste Chicago-gangster († [[1947]]) 
 * [[1969]] - [[DJ Tiësto]], Nederlaanse DJ 
 
