--- a/Rijk_van_Rotterdam.mw
+++ b/Rijk_van_Rotterdam.mw
@@ -1,7 +1,7 @@
-'''Rijk van Rotterdam''' ([[1948]] - [[16 juni]] [[2001]]) was een [[Nederlaand|Nederlaandse]] schriever, journalist en jazzmuzikant.
+'''Rijk van Rotterdam''' ([[1948]] - [[16 juni]] [[2001]]) was een [[Nederlaand|Nederlaandse]] schriever, journalist en jazzmuzikant uut de [[Utrecht (provinsie)|Utrechtse]] plaatse [[t Veen|'t Veen]] (Veenendaal).
 
 ==Journalistiek wark==
-Rijk van Rotterdam kwaamp uut de [[Utrecht (provinsie)|Utrechtse]] plaatse [[t Veen|'t Veen]] (Veenendaal). Zien [[journalistiek|journalistieke]] loopbane begunde daor bij dagblad ''De Vallei''. Hij besprak theater en film en schreef later ok [[nöalstukken|columns]]. Veur zien column in de ''Arnhemse Courant'' gebruukte hij de schuulname Madrettor. Töt zien hennegaon op dreienvieftigjaorige leeftied was e keunstredacteur bij dizze kraante.
+Zien [[journalistiek|journalistieke]] loopbane begunde in 't Veen bij dagblad ''De Vallei''. Hij besprak theater en film en schreef later ok [[nöalstukken|columns]]. Veur zien column in de ''Arnhemse Courant'' gebruukte hij de schuulname Madrettor. Töt zien hennegaon op dreienvieftigjaorige leeftied was e keunstredacteur bij dizze kraante.
 
 ==Literaire schrieverije==
 In 1984 verscheen van hum de verhalenbundel ''De rookstoel op het groene laken'', mit zeuven verhalen aover mèensen die in een uutzunderingspositie verkeert of in 't nauw edreven bint. 't Aandere jaor verscheen de roman ''Vechten'', waorin Sim, een jonge uut een kaansarm gezin, kennismak mit een keunstenaarsgezin en haopt det zij hum kunt helpen uut zien bestaon te ontsnappen.
