/* Dialekt */ Körtere zinnen

--- a/T_Veen.mw
+++ b/T_Veen.mw
@@ -29,7 +29,7 @@ Tegenswoordig is t Veen n antrekkelike vestigingsplaots veur bedrieven vanwegen 
 t Veen was de Fietsstad van Nederland in [[2000]] en enomineerd in [[2002]] en [[2008]]. In 1997 was t Veen zelfs de ''Greunste Stad van Europa'' en in [[2004]] de greunste stad van [[Nederlaand|Nederland]].
 
 ==Dialekt==
-In t Veen wort van oorsprong gien [[Nedersaksies]] dialekt espreuken, t valt net buten t [[West-Veluws]]e taolgebied, mar t het wel n antal overeenkomsten mit t West-Veluws en veural mit t [[Schaarpezeels]] of de umliggende gebiejen dat soms bie t West-Veluws erekend wort mar meestal net niet.
+In t Veen wort van oorsprong gien [[Nedersaksies]] dialekt espreuken. t Valt net buten t [[West-Veluws]]e taolgebied, mar het wel n antal overeenkomsten mit t West-Veluws en veural mit t [[Schaarpezeels]] of de umliggende gebiejen. Die worren soms bie t West-Veluws erekend, mar meestal net niet.
 
 {{Utrecht}}
 {{Dialekt|wvel|Putten|Algemene Nedersaksiese Schriefwieze}}
