--- a/Rijk_van_Rotterdam.mw
+++ b/Rijk_van_Rotterdam.mw
@@ -4,7 +4,7 @@
 Zien [[journalistiek|journalistieke]] loopbane begunde in 't Veen bij dagblad ''De Vallei''. Hij besprak theater en film en schreef later ok [[nöalstukken|columns]]. Veur zien column in de ''Arnhemse Courant'' gebruukte hij de schuulname Madrettor. Töt zien hennegaon op dreienvieftigjaorige leeftied was e keunstredacteur bij dizze kraante.
 
 ==Literaire schrieverije==
-In 1984 verscheen van hum de verhalenbundel ''De rookstoel op het groene laken'', mit zeuven verhalen aover mèensen die in een uutzunderingspositie verkeert of in 't nauw edreven bint. 't Aandere jaor verscheen de roman ''Vechten'', waorin Sim Kalberg, een jonge uut een kaansarm gezin, kennismak mit een keunstenaarsgezin en haopt det zij hum kunt helpen uut zien bestaon te ontsnappen.
+In 1984 verscheen van hum de verhalenbundel ''De rookstoel op het groene laken'', mit zeuven verhalen aover mèensen die in een uutzunderingspositie verkeert of in 't nauw edreven bint. 't Aandere jaor verscheen de roman ''Vechten'', waorin Sim Kalberg, een jonge uut een kaansarm gezin, kennismak mit een keunstenaarsgezin en haopt det zij hum kunt helpen uut zien milieu te ontsnappen.
 
 ==Muzikale bezigheden==
 Rijk van Rotterdam beweug hum in de [[jazz|jazzscene]] van 't Veen en speulde [[gitaar]] en [[contrabas]]. Zien veurbielden waren de Amerikaanse jazzgitaristen [[Wes Montgomery]] en [[Barney Kessel]]. Verscheiden maolen hef e opetreden op jazz- en gedichtenaovends in de Veense [[beatmeziek|beatclub]] 't Dingetje. Lange tied speulde e samen mit pianist Cees Diepeveen en drummer Paul van Kreel.
