--- a/Sallaanse_taalwiezer.mw
+++ b/Sallaanse_taalwiezer.mw
@@ -128,7 +128,7 @@ Regels veur de tegenwoordige tied:
 |Ie keken / kekken
 |Ie hebt ekeken / ekekken
 |-
-|Hi'j kek
+|Hi'j kek/kik
 |Hi'j keek
 |Hi'j hef ekeken / ekekken
 |-
