*Empty MediaWiki Message*

--- a/Wubbo_Ockels.mw
+++ b/Wubbo_Ockels.mw
@@ -1,4 +1,11 @@
 '''Wubbo Johannes Ockels''' (den [[28 meert|28. määrt]] [[1946]] – den [[18 mei|18. mei]] [[2014]]) was nen [[Nederland|neaderlandsken]] natuurkündigen en rüümdevöärder vöär et Europeeske Rüümde Agentskap [[European Space Agency|ESA]]. In [[1985]] güng he as eyrsten neaderlander med de rüümde in an board van de Space Shuttle Challenger STS-61-A. Nå synen tyd as rüümdevöärder wör Ockels professor ''Aerospace for Sustainable Science and Technology'' an de fakulteit Lucht- en Rüümdevårt an de Techniske Universiteit van [[Delft]].
 
+==Leaven==
+Wubbo Ockels wör geboaren in [[Almelo]] as nen söäne van nen landmeatkündigen, mär hee groiden up in [[Brielle]]. Hee deade [[natuurkünde]] en [[wiskünde]] studeren an de [[Ryksuniveristeit Grönningen]] en haalden syn doktoraaleksamen in [[1973]] med lov. Nå syne study deade hee ekspirimenteren med et verval van atoomkerne under uutsending van gammastrålen an et [[Kernfysisch Versneller Instituut]] (KVI). In [[1978]] proveerden hee hyrup töt dokter an de Ryksuniversiteit van Grönningen.
+
+As weatenskapper en butengewoan hougleraar wör hee in [[1978]] aneweysen döär de [[ESA]] üm med te gån med et Spacelab-programma, en samenwarkingsprojekt van de ESA en de [[NASA]]. Med noch twey andere vakbröders wör hee köäsen as payload-specialist vöär de Spacelab-1-missy. Hee volgeden in [[1980]] en [[1981]] ne upleiding töt rüümdevöärder an et [[Lyndon B. Johnson Space Center]] in [[Texas]] in de [[Vereynigde Ståten]]. By de eyrste Spacelabvlucht in 1983 deade hee vanaf de aerde kommuniceren en underling oaverleggen med de weatenskappers an board.
+
+Van den [[30 oktober|30. oktober]] töt en med den [[6 oktober|6. oktober]] [[1985]] güng he med de Challeenger med de rüümde in. By de vlucht en de tyd in et Spacelab D-1 güng hee oaver de vöäle meatapparaten, wårmed as de weatenskappers allerhande pröve uutvoorden. In syne söäven dage an board voorden hee meyr as söäventig pröve uut.
+
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Ruumte]]
