--- a/Riesn.mw
+++ b/Riesn.mw
@@ -222,7 +222,7 @@ Riesn hef ok n eagn volksleed: ''Mooi Riessen''. Hier he-j t eerste vèrske en t
 *[[Harm oet Riessen]] (1943-2011), komiek, oold-presentator bie [[RTV Oost]], [[revue]]skriewer
 *[[Bert van Losser]] (1973), presentator bie RTV Oost
 *[[Herman Wessels]] (1954-2007), oold-vuurzitter van [[FC Tweante]] en oprichter van Bouwbedrief Wessels
-*[[Dik Wessels]] ([[1946]] - [[2017]], algemeen direkteur van Volker Wessels, de wearldwiede bouwholding woer as ook Bouwbedrief Wessels oonder vaalt. Breur van Herman Wessels.
+*[[Dik Wessels]] ([[1946]] - [[2017]]), algemeen direkteur van VolkerWessels, de wearldwiede bouwholding woer as ook Bouwbedrief Wessels oonder vaalt. Breur van Herman Wessels.
 *[[Jan Zandbergen]] (1938), skriewer
 
 ==Vereniges==
