--- a/Dik_Wessels.mw
+++ b/Dik_Wessels.mw
@@ -14,7 +14,7 @@ Wessels stöäk vöäle geld in de [[enskede]]eske vootbalklub [[FC Twente]]. Sy
 Do as FC Twente in 2016 in geldnoud sat, trummeden Wessels nen koppel twentske underneamers up üm de klub geld te leynen, sou dat FC Twente neet failliet güng. Dårnå bleav hee sik töt synen doud nauw bemoien med et bestüür en de dagelikse afhandeling van saken.
 
 === Persoonlik ===
-Wessels had töt synen doud nen nauwen emotionelen band med syn persoonlik assistente Sinie Wijnen. Hee hevt twey dochters uut en hüwelik wårvan hee vervrömd was. Syne dochters hebbet syn vermöygen oaverenöämen en ståt nu edeyld dardes in de Quote 500.
+Wessels had töt synen doud nen nauwen emotionelen band med syn persoonlik assistente Sinie Wijnen. Hee hevt twey dochters uut en hüwelik wårvan hee vervrömd was. Hee stünd bekend as spykerhard sakenman, mär ouk as stillen geldsketer vöär sociale initiativen. Syne dochters hebbet syn vermöygen oaverenöämen en ståt nu edeyld dardes in de Quote 500.
 
 === Doud ===
 Dik Wessels küm in november 2017 uut de tyd do as he 71 jår was. Hee was en pår dage dårvöär upenöämen in et sekenhuus, med hartklachten.<ref>[https://www.tubantia.nl/rijssen-holten/dik-wessels-71-overleden~aea64022/ Dik Wessels (71) overleden], Tubantia, 21 november 2017.</ref> Hee wör begraeven up den gemeyndeliken karkhov et Lentfert in Ryssen.
