--- a/Snert.mw
+++ b/Snert.mw
@@ -1,11 +1,4 @@
-[[Ofbeelding:Snert.jpg|thumb|left|300px|n Pan mit snert]] 
-'''Snert''' is n dikke soep, môkt van [[aarften]]. Aander landen, zo as Englaand en Duutslaand, kennen ook snert, môr t traditsjonele [[Nederlandse gerechten|Nederlaands gerecht]] dat ien de [[winter]] geten wordt is gounend slim bonden. De soep smôkt t beste as dizzent ien n grode houveulhaid môkt wordt en doarnoa veur t eten nog n dagke stoan blift. Kollen blift de soep n aantel doagen goud, môr hai kin ook goud invrozen worden ien n [[vraizer]]. De houveulheden van de verschaaidene ingredienten varieern. Ien totoal mout der zoveul gruinte aan de soep touvougd worden dat de masse biezunder dik wordt, eerder liekend op [[Pap (voedsel)|brij]] as dat t op soep likt.
-
-Per streek kin de snert ook nog weer verschillen.
-
-De soep wordt traditsjoneel geten mit [[Roggebrood|brood]], lègd bieveurbeeld mit [[koatenspek]] of [[keze|kees]] of allend [[Botter|butter]]. Tegenswoordeg wordt der ook voak [[rookworst|rookswôrst]] deurhin doan. 
-
-Ien Grunnen en Twìnte is t n traditsie dat der stukskes swienevlais deurhin kommen, in tegenstellen tot de maiste aandere gebieden. Ien Twìnte kinnen der ook stukskes hìnnevlais deurhìn doan worden. 
+heb zo snert
 
 ==Leegsaksisch==
 *[[Achterhook]]:''arwtensoep'' (snert wörd haost nooit ebroekt)
