--- a/Dik_Wessels.mw
+++ b/Dik_Wessels.mw
@@ -17,7 +17,7 @@ Do as FC Twente in 2016 in geldnoud sat, trummeden Wessels nen koppel twentske u
 Wessels had töt synen doud nen nauwen emotionelen band med syn persoonlik assistente Sinie Wijnen. Hee hevt twey dochters uut en hüwelik wårvan hee vervrömd was. Hee stünd bekend as spykerhard sakenman, mär ouk as stillen geldsketer vöär sociale initiativen. Syne dochters hebbet syn vermöygen oaverenöämen en ståt nu edeyld dardes in de Quote 500.
 
 === Doud ===
-Dik Wessels küm in november 2017 uut de tyd do as he 71 jår was. Hee was en pår dage dårvöär upenöämen in et sekenhuus, med hartklachten.<ref>[https://www.tubantia.nl/rijssen-holten/dik-wessels-71-overleden~aea64022/ Dik Wessels (71) overleden], Tubantia, 21 november 2017.</ref> Hee wör begraeven up den gemeyndeliken karkhov et Lentfert in Ryssen.
+Dik Wessels küm in november 2017 uut de tyd do as he 71 jår was. Hee was en pår dage dårvöär upenöämen in et sekenhuus, med hartklachten.<ref>[https://www.tubantia.nl/rijssen-holten/dik-wessels-71-overleden~aea64022/ Dik Wessels (71) overleden], Tubantia, 21 november 2017.</ref> Hee had et al es eyrder an et harte had en by ne operaty 5 ümleidingen kreagen. Toch bleav hee töt synen doud rouken. Hee wör under groute belangstelling begraeven up den gemeyndeliken karkhov et Lentfert in Ryssen.
 
 == Underskeidingen ==
 In 1999 wör Dik Wessels ansteld as Officier in de Orde van Oranje-Nassau. van de gemeynde [[Ryssen-Holten]] was hee eyrebörger. 
