--- a/Dik_Wessels.mw
+++ b/Dik_Wessels.mw
@@ -13,9 +13,9 @@ Wessels stöäk vöäle geld in de [[enskede]]eske vootbalklub [[FC Twente]]. Sy
 
 Do as FC Twente in 2016 in geldnoud sat, trummeden Wessels nen koppel twentske underneamers up üm de klub geld te leynen, sou dat FC Twente neet failliet güng. Dårnå bleav hee sik töt synen doud nauw bemoien med et bestüür en de dagelikse afhandeling van saken.
 
-'''Luchthaven Twente'''
+=== Luchthaven Twente === 
 
-In de olde luchtmachtbasis van Twente tüsken Hengelo en Enskede saggen Wessels nen investeringskans. Hee wolde der internationale lynvluchten up låten vlegen, wat in de streake vöäle geld en wark solde upleyveren. Dat plan wör teagenewarked döär de vluchthavens van [[Vluchthaven Münster/Ossenbrügge|Münster/Ossenbrügge]] en [[Vluchthaven Dortmund|Dortmund]].
+In de olde luchtmachtbasis van Twente tüsken Hengelo en Enskede saggen Wessels nen investeringskans. Hee wolde der internationale lynvluchten up låten vlegen, wat in de streake vöäle geld en wark solde upleyveren. Dat plan wör teagenewarked döär de vluchthavens van [[Vluchthaven Münster/Ossenbrügge|Münster/Ossenbrügge]] en [[Vluchthaven Dortmund|Dortmund]]. Dat stöäk em. <ref>[https://www.rtvoost.nl/nieuws/280342/Wie-was-Dik-Wessels-Een-overzicht-van-het-leven-van-deze-markante-ondernemer RTV Oost - Wie was Dik Wessels. 21. november 2017.]</ref>
 
 === Persoonlik ===
 Wessels had töt synen doud nen nauwen emotionelen band med syn persoonlik assistente Sinie Wijnen. Hee hevt twey dochters uut en hüwelik wårvan hee vervrömd was. Hee stünd bekend as spykerhard sakenman, mär ouk as stillen geldsketer vöär sociale initiativen. Syne dochters hebbet syn vermöygen oaverenöämen en ståt nu edeyld dardes in de Quote 500.
