[[:Kategorie:Oondernemmer]] weg-ehaald; [[:Kategorie:Nederlaands oondernemmer]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Dik_Wessels.mw
+++ b/Dik_Wessels.mw
@@ -35,4 +35,4 @@ In 1999 wör Dik Wessels ansteld as Officier in de Orde van Oranje-Nassau. van d
 {{DEFAULTSORT:Wessels, Dik}}
 
 [[Kategorie:Tweants artikel]]
-[[Kategorie:Oondernemmer]]
+[[Kategorie:Nederlaands oondernemmer]]
