+[[Kategorie:Tukker]]; ±[[Kategorie:Prissentator]]→[[Kategorie:Nederlaands presentator]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Leonie_ter_Braak.mw
+++ b/Leonie_ter_Braak.mw
@@ -53,6 +53,8 @@ Februari 2020 spöälden see med as dochter ''Liesbeth'' in den twentsken film [
 * ''Wie is de Mol'' (2020) - 6. afvaller in afleyvering 8
 * ''Ladies Night'' (2020) - vasten gast vöär en antal afleyveringen
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Prissentator]]
-[[Kategorie: Akteur]]
+{{DEFAULTSORT:Braak, Leonie ter}}
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Nederlaands presentator]]
+[[Kategorie:Akteur]]
+[[Kategorie:Tukker]]
