--- a/Leonie_ter_Braak.mw
+++ b/Leonie_ter_Braak.mw
@@ -9,7 +9,7 @@ Nåjår [[2010]] begünde Ter Braak by et NTR-programma ''Keuringsdienst van Waa
 
 Vöär et [[Algemeen Dagblad]] makeden Leonie Ter Braak de ryge ''De Roze Hel'', med bekende en unbekende ölden. Dårin wör allens behandeld wat lüde lever neet oaver olderskap weaten wilt. In [[2020]] deade see med an et programma ''Wie is de mol?''. Vanaf 2019 düt see et vöälbekeakene SBS6-programma ''Hart van Nederland'' presenteren.
 
-Februari 2020 spöälden see med as dochter ''Liesbeth'' in den twentsken film [[De beentes van Sint-Hildegard]] van [[Herman Finkers]].
+Februari 2020 spöälden see med as dochter ''Liesbeth'' in den twentsken film [[De Beentjes van Sint-Hildegard]] van [[Herman Finkers]].
 
 ==Televisie==
 ===Presentaty===
