--- a/Bakworst.mw
+++ b/Bakworst.mw
@@ -1,4 +1,4 @@
-[[Bestaand:TweantsenBakleawerworst1.jpg|thumb|Pläkke bakworst in de panne]]
+[[Bestaand:TweantsenBakleawerworst1.jpg|thumb|Plakken bakworst in de panne]]
 [[Bestaand:Bakworst.JPG|thumb|Bakworst]]
 Nen '''Bakworst''' is nen worst den at vuural in [[Tweante]] en t [[Meunsterlaand]] egetn en emaakt wörd. n Volledigen naamn is dan ook '''Tweantsen Bakleawerworst''', mear iederene keant t better bie den kortn naamn. n  bakworst besteet vuural oet [[Varken|voarknsleawer]] en voarknsvleais, en is echtn weenterkost.
 
