*Empty MediaWiki Message*

--- a/Daphne_Bunskoek.mw
+++ b/Daphne_Bunskoek.mw
@@ -1,4 +1,4 @@
-'''Daphne Wilhelmina Bunskoek''' ([[Almelo]], [[22 november]] [[1973]]) is ne [[twente|twentske]] presentatrice en [[aktöör|actrice]].
+'''Daphne Wilhelmina Bunskoek''' ([[Almelo]], [[22 november]] [[1973]]) is ne [[twente|twentske]] presentatrice en [[akteur|aktrice]].
 
 ==Leavensbeskryving==
 Do as Bunskoek van et [[vwo]] küm, wüst see noch kats neet wat se wulde. By de universiteit van [[Reims]] volgden he en jår ne språkenstudy, güng når de [[Universiteat Tweante|Universiteit van Twente]] hen underwyskünde studeren en deadee dårnå ne upleiding vöär dramaleyraar an de ''Hougeskole vöär de Kunsten'' in [[Kampen (Overiessel)|Kampen]]. By dee study must he dree månd in de leyre by Keith Johnstone, nen bekenden [[Groutbrittannie|britsken]] teaterleyraar.
