*Empty MediaWiki Message*

--- a/Leonie_ter_Braak.mw
+++ b/Leonie_ter_Braak.mw
@@ -1,4 +1,4 @@
-'''Leonie ter Braak''' ([[Buurse]], den [[28. september]] [[1980]]) is en [[Twente|twentsk]] model, televisypresentatrice en [[aktöör|aktrice]].
+'''Leonie ter Braak''' ([[Buurse]], den [[28 september|28. september]] [[1980]]) is en [[Twente|twentsk]] model, televisypresentatrice en [[aktöör|aktrice]].
 
 ==Loupbane==
 Ter Braak syne loupbane begünde as fotomodel. Al rap deade he ouk presenteren vöär RTV Oost, by de programma's ''Prikkels'' en ''Vet plat''.  Et eyrste was en programma wårin as Ter Braak bysündere steades in [[Oaveriessel|Oaveryssel]] besöchten, sou as modegevölige winkels en uutgånssteades. Et tweyde was en spelprogramma wårin as junge deylneamers uut de verskillende deylen van oaveryssel tested wordet up öäre kennis van et [[Nedersaksisch|neadersassisk]]. Van [[2007]] töt [[2011]] deade se vöär RTV Oost et programma En dan nog even dit presenteren. 
