--- a/Van_Jonge_Leu_en_Oale_Groond.mw
+++ b/Van_Jonge_Leu_en_Oale_Groond.mw
@@ -37,7 +37,7 @@ De familie Bode bint noabers van de Wildspiekers. De rieke familie Bode besteet 
 * Leida Venterink ([[Willy Warmink]])
 * Pascal Hesselink ([[Tony Minnema]])
 * Faruk Aslan ([[Gokhan Iyigunler]])
-* Eva ([[Leonie Ter Braak]])
+* Eva ([[Leonie ter Braak]])
 * Henny Smits ([[Dirk Stegeman]])
 * Roos ([[Moniek Kötter]])
 * Debby Dekkers ([[Kim Kötter]])
