*Empty MediaWiki Message*

--- a/Bladel.mw
+++ b/Bladel.mw
@@ -11,8 +11,8 @@
 | inwonners = 20.531
 | doatum inwonners = 1 augustus 2020
 | dichtheid = 273
-| breedtegroad = ../../../N
-| lengtegroad = ../../../E
+| breedtegroad = 
+| lengtegroad =
 | verkeersoader = A67, N284
 | netnummer = 0497
 | postkode = 5527-5534
