*Empty MediaWiki Message*

--- a/Bladel.mw
+++ b/Bladel.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | bestaandsnaam vlagge =
-| bestaandsnaam woapn = Coat_of_arms_of_XXXXX.svg
+| bestaandsnaam woapn = Coat_of_arms_of_Bladel.svg
 | naam = Bladel
 | lokatie = LocatieBladel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
