*Empty MediaWiki Message*

--- a/Bladel.mw
+++ b/Bladel.mw
@@ -1,6 +1,6 @@
 {{Gemeante
-| bestaandsnaam vlagge =
-| bestaandsnaam woapn = Coat_of_arms_of_Bladel.svg
+| bestaandsnaam vlagge = Flag_of_Bladel.svg
+| bestaandsnaam woapn = Bladel_wapen.svg
 | naam = Bladel
 | lokatie = LocatieBladel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
