*Empty MediaWiki Message*

--- a/Bukel_(gemeynde).mw
+++ b/Bukel_(gemeynde).mw
@@ -14,7 +14,7 @@
 | verkeersoader = [[N277]], [[N605]]
 | netnummer = 0492
 | postkode = 5427, 5428
-| webstie = [http://www.naamgemeynde.nl/ www.naamgemeynde.nl]
+| webstie = [http://www.boekel.nl/ www.boekel.nl]
 }}
 
 '''Bukel''' (Neaderlandske skryvwyse: '''Boekel''') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdstad van de gemeynde is et lyknamige dorp [[Boekel (Noordbråbant)|Bukel]]. Der woanet 10.872 lüde up ne uppervlakde van 34,52 km². 
@@ -24,6 +24,7 @@ Andere dörpe en kernen in de gemeynde sint [[Venhorst]] en [[Huize Padua]].
 == Bekende lüde uut de gemeynde ==
 *
 == Uutgånde verwysing ==
-[ https://www.naamgemeynde.nl/ Officiele gemeyndewebsteade]
+[ https://www.boekel.nl/ Officiele gemeyndewebsteade]
+
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
