--- a/Bukel_(gemeynde).mw
+++ b/Bukel_(gemeynde).mw
@@ -24,7 +24,7 @@ Andere dörpe en kernen in de gemeynde sint [[Venhorst]] en [[Huize Padua]].
 == Bekende lüde uut de gemeynde ==
 *
 == Uutgånde verwysing ==
-[ https://www.boekel.nl/ Officiele gemeyndewebsteade]
+* [https://www.boekel.nl/ Officiele gemeyndewebsteade]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
