*Empty MediaWiki Message*

--- a/Bladel.mw
+++ b/Bladel.mw
@@ -19,7 +19,7 @@
 | webstie = [http://www.bladel.nl/ www.bladel.nl]
 }}
 
-‘’’Bladel’’’ is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige dorp [[Bladel (dorp)|Bladel]]. Der woanet 20.531 lüde up ne uppervlakde van 73,60 km². 
+'''Bladel''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige dorp [[Bladel (dorp)|Bladel]]. Der woanet 20.531 lüde up ne uppervlakde van 73,60 km². 
 
 Andere dörpe en kernen in de gemeynde sint Bladel, [[Casteren]], [[Hapert]], [[Dalem]], [[Hoogeloon]] en [[Netersel]].
 
