*Empty MediaWiki Message*

--- a/Bukel_(gemeynde).mw
+++ b/Bukel_(gemeynde).mw
@@ -26,5 +26,7 @@ Andere dörpe en kernen in de gemeynde sint [[Venhorst]] en [[Huize Padua]].
 == Uutgånde verwysing ==
 * [https://www.boekel.nl/ Officiele gemeyndewebsteade]
 
+{{Noord-Braobant}}
+
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
