*Empty MediaWiki Message*

--- a/Bladel.mw
+++ b/Bladel.mw
@@ -35,7 +35,9 @@ Andere dörpe en kernen in de gemeynde sint Bladel, [[Casteren]], [[Hapert]], [[
 * Wim Gubbels (1912) bealdhauer.
 
 == Uutgånde verwysing ==
-[http://www.bladel.nl/ www.bladel.nl - Officiele gemeyndewebsteade]
+* [http://www.bladel.nl/ www.bladel.nl - Officiele gemeyndewebsteade]
+
+{{Noord-Braobant}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
