*Empty MediaWiki Message*

--- a/Boxmeer.mw
+++ b/Boxmeer.mw
@@ -11,7 +11,7 @@
 | inwonners =  29.465
 | doatum inwonners = 1 augustus 2020
 | dichtheid = 264
-| breedtegroad = 51/38/53/N, 
+| breedtegroad = 51/38/53/N
 | lengtegroad =  5/56/38/E
 | verkeersoader = [[A73]], [[A77]], [[N264]]
 | netnummer = 0478, 0485
