*Empty MediaWiki Message*

--- a/Boxmeer.mw
+++ b/Boxmeer.mw
@@ -1,5 +1,5 @@
 {{Gemeante
-| bestaandsnaam vlagge = Flag_of_Boxmeer.svg
+| bestaandsnaam vlagge = Boxmeer_vlag.svg 
 | bestaandsnaam woapn = Coat_of_arms_of_Boxmeer.svg
 | naam = Boxmeer
 | lokatie = LocatieBoxmeer
