*Empty MediaWiki Message*

--- a/Breda.mw
+++ b/Breda.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | bestaandsnaam vlagge = Flag_of_Breda.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Breda.svg
+| bestaandsnaam woapn = Breda_wapen.svg
 | naam = Breda
 | lokatie = LocatieBreda
 | proveensie = [[Noord-Braobant|Noordbråbant]]
