*Empty MediaWiki Message*

--- a/Breda.mw
+++ b/Breda.mw
@@ -19,7 +19,7 @@
 | webstie = [http://www.breda.nl/ www.breda.nl]
 }}
 
-'''Breda''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de lynamige stad [[Breda]]. Der woanet 183.790 lüde up ne uppervlakde van 128,68 km². 
+'''Breda''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de lynamige stad [[Breda]]. Der woanet 183.790 lüde up ne uppervlakde van 128,68 km². De name Breda wördt vöär et eyrste nöömd in [[1125]].
 
 Bekende seenswaerdigheiden in Breda sint under meyr et [[Kasteel van Breda]] en de [[Sunt-Antoniuskatedråle (Breda)|Sunt-Antoniuskatedråle]].
 
@@ -31,7 +31,27 @@ Andere kernen in de gemeynde sint:
 * Ulvenhout	(5.025)
 
 == Bekende lüde uut de gemeynde ==
-*
+* [[Tijs Verwest]] - better bekend as DJ Tiësto
+* [[Robbert van de Corput]] (DJ Hardwell), 
+* Cor Fijneman (musikant)
+*Corry Brokken, (musikant)
+* Pierre Kartner (Vader Abraham, sanger)
+* Corry Konings (sangeresse)
+* Robin de Raaff (musikant)
+* Dries van Kuijk (Colonel Parker, manager van [[Elvis Presley]])
+* Hans van Mierlo (politikman)
+* Klaas Dijkhoff (politikman)
+* Onno Ruding (politikman)
+* Ton Lokhoff (vootballer)
+* Antoon "Rat" Verlegh (vootballer)
+* Kees Rijvers (vootballer)
+* Leo Canjels (vootballer)
+* Mats Seuntjens (vootballer)
+* Frits Pirard (wielrenner) 
+* Jurgen van den Goorbergh (motorsport)
+* Patrick van den Goorbergh (motorsport)
+* Sylvie Meis (presentatrice)
+
 == Uutgånde verwysing ==
 * [https://www.breda.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
