--- a/Breda.mw
+++ b/Breda.mw
@@ -21,7 +21,7 @@
 
 '''Breda''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de lynamige stad [[Breda]]. Der woanet 183.790 lüde up ne uppervlakde van 128,68 km². De name Breda wördt vöär et eyrste nöömd in [[1125]].
 
-Bekende seenswaerdigheiden in Breda sint under meyr et [[Kasteel van Breda]] en de [[Sunt-Antoniuskatedråle (Breda)|Sunt-Antoniuskatedråle]].
+Bekende seenswaerdigheiden in Breda sint under meyr et [[Kasteel van Breda]] en de [[Sünt-Antoniuskatedråle (Breda)|Sunt-Antoniuskatedråle]].
 
 ==Andere dörpe, kerne en nåberskoppen ==
 Andere kernen in de gemeynde sint:
