--- a/Cuijk.mw
+++ b/Cuijk.mw
@@ -20,7 +20,7 @@
 | webstie = [http://www.cuijk.nl/ www.cuijk.nl]
 }}
 
-'''Cuijk''' ([[nysassiske skryvwyse]]: ''Kuyk'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige [[Cuijk]]. Der woanet 25.291 lüde up ne uppervlakde van 57,07 km². 
+'''Cuijk''' ([[nysassiske skryvwyse]]: ''Kuyk'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige [[Cuijk (dorp)|Cuijk]]. Der woanet 25.291 lüde up ne uppervlakde van 57,07 km². 
 
 Andere dörpe en kernen in de gemeynde sint
 * [[Sint Agatha (steade)|Sünte Agatha]]
