*Empty MediaWiki Message*

--- a/Boekel.mw
+++ b/Boekel.mw
@@ -1,7 +1,7 @@
 '''Boekel''' kan verwiezen naor:
 
-* [[Boekel (Noord-Braobant)]] - ne plaatse in Noord-Braobant
-** [[Boekel (gemiente)]] - de gelieknamige gemiente
+* [[Boekel (Noordbråbant)|Boekel (Noord-Braobant)]] - ne plaatse in Noord-Braobant
+** [[Bukel (gemeynde)|Boekel (gemiente)]] - de gelieknamige gemiente
 * [[Boekel (Noord-Hollaand)]] - ne boerschap in Castricum
 * [[Boekel (Zwalm)]] - n graofschap, later op-egaon in t graofschap Vlaanderen
 * [[Bokel (Eanske)]]
