/* Y müt et mär weaten */

--- a/Cranendonck.mw
+++ b/Cranendonck.mw
@@ -28,7 +28,7 @@ Andere dörpe en kernen in de gemeynde sint XXXXXXX.
 *Maarheeze
 *Soerendonk
 
-== Y müt et mär weaten ==
+== Y mütten et mär weaten ==
 * Köäning [[Willem-Alexander van de Nedderlanden|Willem-Alexander]] hevt as bytitel ''Baron van Cranendonck''.
 == Uutgånde verwysing ==
 * [https://www.naamgemeynde.nl/ Officiele gemeyndewebsteade]
