*Empty MediaWiki Message*

--- a/Deurne.mw
+++ b/Deurne.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | bestaandsnaam vlagge = Deurne_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_XXXXX.svg
+| bestaandsnaam woapn = Deurne_wapen.svg
 | naam = Deurne
 | lokatie = LocatieDeurne
 | proveensie = [[Noord-Braobant|Noordbråbant]]
