--- a/Cranendonck.mw
+++ b/Cranendonck.mw
@@ -16,12 +16,12 @@
 | verkeersoader = A2
 | netnummer = 0495
 | postkode = 6020-6028
-| webstie = [http://www.naamgemeynde.nl/ www.naamgemeynde.nl]
+| webstie = [http://www.cranendonck.nl/ www.cranendonck.nl]
 }}
 
 '''Cranendonck''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[Büdel|Büdel]]. Der woanet 20.941 blüde up ne uppervlakde van 78,05 km². Et maket deyl uut van de metropole van [[Eindhoven]]. Et wördt vöär et eyrste nöömd in [[1318]].
 
-Andere dörpe en kernen in de gemeynde sint XXXXXXX.
+Andere dörpe en kernen in de gemeynde sint:
 *Budel-Dorplein
 *Budel-Schoot
 *Gastel
@@ -31,7 +31,7 @@ Andere dörpe en kernen in de gemeynde sint XXXXXXX.
 == Y mütten et mär weaten ==
 * Köäning [[Willem-Alexander van de Nedderlanden|Willem-Alexander]] hevt as bytitel ''Baron van Cranendonck''.
 == Uutgånde verwysing ==
-* [https://www.naamgemeynde.nl/ Officiele gemeyndewebsteade]
+* [https://www.cranendonck.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
