--- a/Dongen_(gemeynde).mw
+++ b/Dongen_(gemeynde).mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | bestaandsnaam vlagge = Dongen_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Dongen.svg
+| bestaandsnaam woapn = Dongen_wapen.svg
 | naam = Dongen
 | lokatie = LocatieDongen
 | proveensie = [[Noord-Braobant|Noordbråbant]]
