*Empty MediaWiki Message*

--- a/Dongen_(gemeynde).mw
+++ b/Dongen_(gemeynde).mw
@@ -1,5 +1,5 @@
 {{Gemeante
-| bestaandsnaam vlagge = Dongen_vlag.svg
+| bestaandsnaam vlagge = Flag_of_Dongen.svg
 | bestaandsnaam woapn = Dongen_wapen.svg
 | naam = Dongen
 | lokatie = LocatieDongen
