--- a/Dongen_(gemeynde).mw
+++ b/Dongen_(gemeynde).mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | bestaandsnaam vlagge = Flag_of_Dongen.svg
-| bestaandsnaam woapn = Dongen_wapen.svg
+| bestaandsnaam woapn = Coat_of_Arms_of_Dongen.svg
 | naam = Dongen
 | lokatie = LocatieDongen
 | proveensie = [[Noord-Braobant|Noordbråbant]]
