*Empty MediaWiki Message*

--- a/Drimmelen_(gemeynde).mw
+++ b/Drimmelen_(gemeynde).mw
@@ -19,7 +19,7 @@
 | webstie = [http://www.drimmelen.nl/ www.drimmelen.nl]
 }}
 
-'''Drimmelen''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[Made]]. Der woanet 27.251 lüde up ne uppervlakde van 119,43 km². De gemeynde ligt kort by [[Breda]] en [[Oosterhout]].
+'''Drimmelen''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[Made]]. Der woanet 27.251 lüde up ne uppervlakde van 119,43 km². De gemeynde ligt kort by [[Breda]] en [[Oosterhout]] en hevt nen haven vöär pleseerjachten.
 
 ==Kerne==
 Andere dörpe en kernen in de gemeynde sint:
