*Empty MediaWiki Message*

--- a/Geldrop-Mierlo.mw
+++ b/Geldrop-Mierlo.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | bestaandsnaam vlagge = Geldrop-Mierlo_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Geldrop-Mierlo.svg
+| bestaandsnaam woapn = Geldrop-Mierlo_wapen.svg
 | naam = Geldrop-Mierlo
 | lokatie = LocatieGeldrop-Mierlo
 | proveensie = [[Noord-Braobant|Noordbråbant]]
