*Empty MediaWiki Message*

--- a/Geldrop-Mierlo.mw
+++ b/Geldrop-Mierlo.mw
@@ -19,9 +19,10 @@
 | webstie = [http://www.geldrop-mierlo.nl/ www.geldrop-mierlo.nl]
 }}
 
-'''Geldrop-Mierlo''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et dorp [[Geldrop]]. Der woanet 39.997lüde up ne uppervlakde van 31,39 km². 
+'''Geldrop-Mierlo''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et dorp [[Geldrop]]. Der woanet 39.997 lüde up ne uppervlakde van 31,39 km². 
 
 ==Dorpen en kernen==
+Nöäst de naamgeavende dorpen sint der ouk noch ne rygel andere nåberskappen en kernen in de gemeynde:
 === Dorpen ===
 * [[Geldrop]]
 * [[Mierlo]]
