--- a/Grave_(gemeynde).mw
+++ b/Grave_(gemeynde).mw
@@ -19,7 +19,7 @@
 | webstie = [http://www.grave.nl/ www.grave.nl]
 }}
 
-'''Grave ''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[NAAM]]. Der woanet XXXXX lüde up ne uppervlakde van 28,03 km². Andere dörpe en kernen in de gemeynde sint Velp, Escharen en Gassel..
+'''Grave ''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige [[Grave]]. Der woanet 12.452 lüde up ne uppervlakde van 28,03 km². Andere dörpe en kernen in de gemeynde sint Velp, Escharen en Gassel.
  
 == Uutgånde verwysing ==
 * [https://www.grave.nl/ Officiele gemeyndewebsteade]
