*Empty MediaWiki Message*

--- a/Halderbarge.mw
+++ b/Halderbarge.mw
@@ -2,7 +2,7 @@
 | bestaandsnaam vlagge =Halderberge_vlag.svg
 | bestaandsnaam woapn = Coat_of_arms_of_Halderberge.svg
 | naam = Halderbarge
-| lokatie = NL_-_locator_map_municipality_code_GM1655_%282016%29.png
+| lokatie = NL_-_locator_map_municipality_code_GM1655_%282016%29
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Oudenbosch
 | öppervlakte = 75,21 km²
