--- a/Sport.mw
+++ b/Sport.mw
@@ -1,5 +1,5 @@
 [[Bestaand:EK Zwemmen 2006 100m vrij mannen.jpg|250px|thumb|Wedstriedzwemmen: de Olympische Speulen van 2006]] 
-Een '''sport''' ku-j umschreven as een lichamelijk inspannend spel (bieveurbeeld [[voebal]]) of een [[spel|denkspel]] (bieveurbeeld [[schaken]]). An zo'n spel zitten meestentieds regels ekoppeld en je kunnen der wedstriejen in doon. Sport ku-j doon umda-j der gewoon schik an hemmen of umda-j 't as wark doon (en der vake tegeliekertied schik an hemmen). 't Woord ''sport'' kump van 't [[Oudfrans]]e woord ''desport'' dat ''vrieje tied'' betekent.
+sport is een tijdverspilling. Een '''sport''' ku-j umschreven as een lichamelijk inspannend spel (bieveurbeeld [[voebal]]) of een [[spel|denkspel]] (bieveurbeeld [[schaken]]). An zo'n spel zitten meestentieds regels ekoppeld en je kunnen der wedstriejen in doon. Sport ku-j doon umda-j der gewoon schik an hemmen of umda-j 't as wark doon (en der vake tegeliekertied schik an hemmen). 't Woord ''sport'' kump van 't [[Oudfrans]]e woord ''desport'' dat ''vrieje tied'' betekent.
 
 == Geschiedenisse ==
 't Verschiensel sport is al bekend uut de klassieke oudheid, de [[Griekenlaand|Grieken]] orgeniseren al de [[Olympische Speulen]].hte sportn is helemaal al over de wereld verprietn en de rominen dedtn het ook
