--- a/Drimmelen_(gemeynde).mw
+++ b/Drimmelen_(gemeynde).mw
@@ -5,9 +5,9 @@
 | lokatie = LocatieDrimmelen
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Made
-| öppervlakte = 119,43 km²
-| öppervlakte laand = 95,18 km²
-| öppervlakte water = 24,25 km²
+| öppervlakte = 119,43
+| öppervlakte laand = 95,18
+| öppervlakte water = 24,25
 | inwonners = 27.251
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 286 
