--- a/Dongen_(gemeynde).mw
+++ b/Dongen_(gemeynde).mw
@@ -5,9 +5,9 @@
 | lokatie = LocatieDongen
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Dongen
-| öppervlakte = 29,74 km²
-| öppervlakte laand = 29,24 km²
-| öppervlakte water = 0,5 km²
+| öppervlakte = 29,74
+| öppervlakte laand = 29,24
+| öppervlakte water = 0,5
 | inwonners = 26.345
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 901 
