--- a/Deurne.mw
+++ b/Deurne.mw
@@ -5,9 +5,9 @@
 | lokatie = LocatieDeurne
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Deurne
-| öppervlakte = 	118,36 km²
-| öppervlakte laand = 	116,93 km²
-| öppervlakte water = 1,43 km²
+| öppervlakte = 	118,36
+| öppervlakte laand = 	116,93
+| öppervlakte water = 1,43
 | inwonners = 32.466
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 278 
