--- a/Eersel.mw
+++ b/Eersel.mw
@@ -5,9 +5,9 @@
 | lokatie = LocatieEersel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Eersel
-| öppervlakte = 83,33 km²
-| öppervlakte laand = 82,46 km²
-| öppervlakte water = 0,87 km²
+| öppervlakte = 83,33
+| öppervlakte laand = 82,46
+| öppervlakte water = 0,87
 | inwonners = 19.418
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 235 
@@ -22,7 +22,6 @@
 '''Eersel''' ([[braobaans|bråbantsk]]: ''Irsel'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige dorp [[Eersel (dorp)|Eersel]]. Der woanet 19.418 lüde up ne uppervlakde van 83,33 km². 
 
 Andere dörpe en kernen in de gemeynde sint Duizel, Knegsel, Steensel, Vessem en Wintelre.
-
 
 == Uutgånde verwysing ==
 * [https://www.eersel.nl/ Officiele gemeyndewebsteade]
