*Empty MediaWiki Message*

--- a/Etten-Leur.mw
+++ b/Etten-Leur.mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge =
-| bestaandsnaam woapn = Coat_of_arms_of_Etten-Leur.svg
+| bestaandsnaam vlagge = Etten en Leur vlag.svg
+| bestaandsnaam woapn = Coat of arms of Etten-Leur.svg
 | naam = Etten-Leur
-| lokatie = NL_-_locator_map_municipality_code_GM0777_%282016%29.png
+| lokatie = NL - locator map municipality code GM0777 (2016).png
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Etten-Leur
-| öppervlakte = 	55,92 km²
-| öppervlakte laand = 	55,30 km²
-| öppervlakte water = 0,62 km²
+| öppervlakte = 55,92
+| öppervlakte laand = 55,30
+| öppervlakte water = 0,62
 | inwonners = 43.896
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 794 
