*Empty MediaWiki Message*

--- a/Etten-Leur.mw
+++ b/Etten-Leur.mw
@@ -2,7 +2,7 @@
 | bestaandsnaam vlagge = Etten en Leur vlag.svg
 | bestaandsnaam woapn = Coat of arms of Etten-Leur.svg
 | naam = Etten-Leur
-| lokatie = NL - locator map municipality code GM0777 (2016).png
+| lokatie = NL - locator map municipality code GM0777 (2016)
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Etten-Leur
 | öppervlakte = 55,92
