*Empty MediaWiki Message*

--- a/Altena.mw
+++ b/Altena.mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge = Altena_vlag.svg
+| bestaandsnaam vlagge = 
 | bestaandsnaam woapn = Altena_wapen.svg
 | naam = Altena
 | lokatie = LocatieAltena
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Altena 
-| öppervlakte = 226,64 km²
-| öppervlakte laand = 200,63 km²
-| öppervlakte water = 26,01 km²
+| öppervlakte = 226,64
+| öppervlakte laand = 200,63
+| öppervlakte water = 26,01
 | inwonners = 56.194
 | doatum inwonners = 1 augustus 2020
 | dichtheid = 280 
@@ -45,8 +45,6 @@ Andere dörpe en kernen in de gemeynde sint
 * Oldendyk 420	
 * Uppel	522	
 
-== Bekende lüde uut de gemeynde ==
-*
 == Uutgånde verwysing ==
 * [https://www.altena.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
