/* Landkaarte van de gemeende */

--- a/Bargeyk.mw
+++ b/Bargeyk.mw
@@ -47,7 +47,7 @@ De gemeenderåd vöär 2018-2022 wörd anvored döär ne koality van et [[CDA]] 
 * Tommie van der Leegte ([[1977]]), vootballer by [[PSV]]
 
 ==Landkaarte van de gemeende==
-[[bestand:Gem-Bergeijk-OpenTopo.jpg|300px|Topografiske kaarte van Bargeyk]]
+[[bestaand:Gem-Bergeijk-OpenTopo.jpg|300px|Topografiske kaarte van Bargeyk]]
 
 ==Verwysingen==
 <references/>
