*Empty MediaWiki Message*

--- a/Bukel_(gemeynde).mw
+++ b/Bukel_(gemeynde).mw
@@ -1,11 +1,11 @@
 {{Gemeante
-| bestaandsnaam vlagge = Flag_of_Boekel.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Boekel_%28NB%29.svg
+| bestaandsnaam vlagge = Flag of Boekel.svg
+| bestaandsnaam woapn = Coat of arms of Boekel (NB).svg
 | naam = Boekel (Bukel)
 | lokatie = LocatieBoekel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = 
-| öppervlakte = 
+| öppervlakte = 34,52
 | öppervlakte laand = 34,51 
 | öppervlakte water = 0,01
 | inwonners = 10.872
