--- a/Boxmeer.mw
+++ b/Boxmeer.mw
@@ -5,9 +5,9 @@
 | lokatie = LocatieBoxmeer
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Boxmeer
-| öppervlakte = 113,84 km²
-| öppervlakte laand = 	111,44 km²
-| öppervlakte water = 	2,4 km²
+| öppervlakte = 113,84
+| öppervlakte laand = 111,44
+| öppervlakte water = 2,4
 | inwonners =  29.465
 | doatum inwonners = 1 augustus 2020
 | dichtheid = 264
@@ -19,7 +19,7 @@
 | webstie = [http://www.boxmeer.nl/ www.boxmeer.nl]
 }}
 
-'''Boxmeer''' ([[nysassiske skryvwyse]]: ''Buksmear'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lykname [[Buksmear]]. Der woanet 29.465 lüde up ne uppervlakde van 113,84 km². De gemeynde Buksmear geyt med 1 januåry 2022 oaver in de gemeynde [[Land van Cuijk]], wårby as sik ouk de gemeynden [[Cuijk (gemeynde)|Cuijk]], [[Mill (Noordbråbant)|Mill]] en [[Sunt Hubert en Sunt Antonis]] anslutet.
+'''Boxmeer''' ([[nysassiske skryvwyse]]: ''Buksmear'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lykname [[Boxmeer (steade)|Boxmeer]]. Der woanet 29.465 lüde up ne uppervlakde van 113,84 km². De gemeynde Buksmear geyt med 1 januåry 2022 oaver in de gemeynde [[Land van Cuijk]], wårby as sik ouk de gemeynden [[Cuijk (gemeynde)|Cuijk]], [[Mill (Noordbråbant)|Mill]] en [[Sunt Hubert en Sunt Antonis]] anslutet.
 
 Andere dörpe en kernen in de gemeynde sint [[Beugen]], [[Groeningen]], [[Holthees]], [[Maashees]], [[Oeffelt]], [[Overloon]], [[Rijkevoort]], [[Sambeek]], [[Vierlingsbeek]] en [[Vortum-Mullem]].
 
