*Empty MediaWiki Message*

--- a/Boxtel.mw
+++ b/Boxtel.mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge = Boxtel_vlag.svg 
-| bestaandsnaam woapn = Coat_of_arms_of_Boxtel.svg
+| bestaandsnaam vlagge = Boxtel vlag.svg 
+| bestaandsnaam woapn = Coat of arms of Boxtel.svg
 | naam = Boxtel
 | lokatie = LocatieBoxtel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = [[Boxtel]]
-| öppervlakte = 64,85 km²
-| öppervlakte laand = 63,73 km²
-| öppervlakte water = 1,12 km²
+| öppervlakte = 64,85
+| öppervlakte laand = 63,73
+| öppervlakte water = 1,12
 | inwonners = 30.807
 | doatum inwonners = 1 augustus 2020
 | dichtheid = 483
@@ -19,7 +19,7 @@
 | webstie = [http://www.Boxtel.nl/ www.Boxtel.nl]
 }}
 
-'''Boxtel''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höydsteade van de gemeynde is et lyknamige dorp [[Boxtel]]. Der woanet 30.807 lüde up ne uppervlakde van 64,85 km². De gemeynde ligt an de rivyr de [[Dommel (rivyr)|Dommel]].
+'''Boxtel''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höydsteade van de gemeynde is et lyknamige dorp [[Boxtel (dorp)|Boxtel]]. Der woanet 30.807 lüde up ne uppervlakde van 64,85 km². De gemeynde ligt an de rivyr de [[Dommel (rivyr)|Dommel]].
 
 Andere dörpe, kerne en nåberskappen in de gemeynde sint nöäst [[Liempde]] en [[Lennisheuvel]]:
 
@@ -36,7 +36,6 @@ Andere dörpe, kerne en nåberskappen in de gemeynde sint nöäst [[Liempde]] en
 * Hezelaar
 * Selissen
 * Looeind
-
 
 == Bekende lüde uut de gemeynde ==
 * [[Hendrik Verhees]], (1744), kaartenmaker
