--- a/Breda.mw
+++ b/Breda.mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge = Flag_of_Breda.svg
-| bestaandsnaam woapn = Breda_wapen.svg
+| bestaandsnaam vlagge = Flag of Breda.svg
+| bestaandsnaam woapn = Breda wapen.svg
 | naam = Breda
 | lokatie = LocatieBreda
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = [[Breda]]
-| öppervlakte = 128,68 km²
-| öppervlakte laand = 125,74 km²
-| öppervlakte water = 	2,94 km²
+| öppervlakte = 128,68
+| öppervlakte laand = 125,74
+| öppervlakte water = 2,94
 | inwonners = 183.790
 | doatum inwonners = 1 augustus 2020
 | dichtheid = 1462
@@ -19,7 +19,7 @@
 | webstie = [http://www.breda.nl/ www.breda.nl]
 }}
 
-'''Breda''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de lynamige stad [[Breda]]. Der woanet 183.790 lüde up ne uppervlakde van 128,68 km². De name Breda wördt vöär et eyrste nöömd in [[1125]].
+'''Breda''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de lynamige stad [[Breda (stad)|Breda]]. Der woanet 183.790 lüde up ne uppervlakde van 128,68 km². De name Breda wördt vöär et eyrste nöömd in [[1125]].
 
 Bekende seenswaerdigheiden in Breda sint under meyr et [[Kasteel van Breda]] en de [[Sünt-Antoniuskatedråle (Breda)|Sunt-Antoniuskatedråle]].
 
