--- a/Breda.mw
+++ b/Breda.mw
@@ -4,7 +4,7 @@
 | naam = Breda
 | lokatie = LocatieBreda
 | proveensie = [[Noord-Braobant|Noordbråbant]]
-| heufdplaats = [[Breda]]
+| heufdplaats = [[Breda (stad)|Breda]]
 | öppervlakte = 128,68
 | öppervlakte laand = 125,74
 | öppervlakte water = 2,94
