--- a/Boxtel.mw
+++ b/Boxtel.mw
@@ -4,7 +4,7 @@
 | naam = Boxtel
 | lokatie = LocatieBoxtel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
-| heufdplaats = [[Boxtel]]
+| heufdplaats = [[Boxtel (dorp)|Boxtel]]
 | öppervlakte = 64,85
 | öppervlakte laand = 63,73
 | öppervlakte water = 1,12
