*Empty MediaWiki Message*

--- a/Cuijk.mw
+++ b/Cuijk.mw
@@ -1,14 +1,13 @@
-
 {{Gemeante
 | bestaandsnaam vlagge =
-| bestaandsnaam woapn = Coat_of_arms_of_Cuijk.svg
+| bestaandsnaam woapn = Coat of arms of Cuijk.svg
 | naam = Cuijk
 | lokatie = LocatieCuijk
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Cuijk
-| öppervlakte = 57,07 km²
-| öppervlakte laand = 	51,16 km²
-| öppervlakte water = 	5,91 km²
+| öppervlakte = 57,07
+| öppervlakte laand = 51,16
+| öppervlakte water = 5,91
 | inwonners = 25.291
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 494
@@ -30,8 +29,6 @@ Andere dörpe en kernen in de gemeynde sint
 * [[Linden (Cuijk)|Linden]]
 * [[Vianen (Noordbråbant)|Vianen]].
 
-== Bekende lüde uut de gemeynde ==
-*
 == Uutgånde verwysing ==
 * [https://www.cuijk.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
