*Empty MediaWiki Message*

--- a/Gemert-Bakel.mw
+++ b/Gemert-Bakel.mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge = Gemert-Bakel_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Gemert-Bakel.svg
+| bestaandsnaam vlagge = Gemert-Bakel vlag.svg
+| bestaandsnaam woapn = Coat of arms of Gemert-Bakel.svg
 | naam = Gemert-Bakel
 | lokatie = LocatieGemert-Bakel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Gemert en Bakel
-| öppervlakte = 123,34 km²
-| öppervlakte laand = 122,14 km²
-| öppervlakte water = 1,2 km²
+| öppervlakte = 123,34
+| öppervlakte laand = 122,14
+| öppervlakte water = 1,2
 | inwonners = 30.693
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 251 
@@ -23,8 +23,6 @@
 
 Dörpe en kernen in de gemeynde sint Bakel, Gemert, De Mortel, Milheeze, Elsendorp, Handel, De Rips.
 
-== Bekende lüde uut de gemeynde ==
-*
 == Uutgånde verwysing ==
 * [https://www.gemert-bakel.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
