*Empty MediaWiki Message*

--- a/Goirle_(gemeynde).mw
+++ b/Goirle_(gemeynde).mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge = Goirle_vlag.svg
-| bestaandsnaam woapn = Goirle_wapen.svg
+| bestaandsnaam vlagge = Goirle vlag.svg
+| bestaandsnaam woapn = Goirle wapen.svg
 | naam = Goirle
 | lokatie = LocatieGoirle
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Goirle
-| öppervlakte = 43,38 km²
-| öppervlakte laand = 	42,99 km²
-| öppervlakte water = 	0,39 km²
+| öppervlakte = 43,38
+| öppervlakte laand = 42,99
+| öppervlakte water = 0,39
 | inwonners = 23.823
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 554 
@@ -23,7 +23,6 @@
 Andere dörpe en kernen in de gemeynde sint Riel en Breehees.
 
 == Bekende lüde uut de gemeynde ==
-
 * [[Frank Verbunt]] (1953), natuurkundigen
 * [[Karin Bruers]] (1962), komedienne
 * [[Gaston van Erven]] (1944-2019), aktöör
@@ -48,6 +47,7 @@ Andere dörpe en kernen in de gemeynde sint Riel en Breehees.
 
 == Uutgånde verwysing ==
 * [https://www.naamgemeynde.nl/ Officiele gemeyndewebsteade]
+
 {{Noord-Braobant}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
