*Empty MediaWiki Message*

--- a/Grave_(gemeynde).mw
+++ b/Grave_(gemeynde).mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge = Grave_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Grave.svg
+| bestaandsnaam vlagge = Grave vlag.svg
+| bestaandsnaam woapn = Coat of arms of Grave.svg
 | naam = Grave 
 | lokatie = LocatieGrave 
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Grave 
-| öppervlakte = 28,03 km²
-| öppervlakte laand = 27,18 km²
-| öppervlakte water = 0,85 km²
+| öppervlakte = 28,03
+| öppervlakte laand = 27,18
+| öppervlakte water = 0,85
 | inwonners = 12.452
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 458 
@@ -20,9 +20,10 @@
 }}
 
 '''Grave ''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige [[Grave]]. Der woanet 12.452 lüde up ne uppervlakde van 28,03 km². Andere dörpe en kernen in de gemeynde sint Velp, Escharen en Gassel.
- 
+
 == Uutgånde verwysing ==
 * [https://www.grave.nl/ Officiele gemeyndewebsteade]
+
 {{Noord-Braobant}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
