*Empty MediaWiki Message*

--- a/Halderbarge.mw
+++ b/Halderbarge.mw
@@ -1,13 +1,13 @@
 {{Gemeante
-| bestaandsnaam vlagge =Halderberge_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Halderberge.svg
+| bestaandsnaam vlagge = Halderberge vlag.svg
+| bestaandsnaam woapn = Coat of arms of Halderberge.svg
 | naam = Halderbarge
-| lokatie = NL_-_locator_map_municipality_code_GM1655_%282016%29
+| lokatie = NL - locator map municipality code GM1655 (2016)
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Oudenbosch
-| öppervlakte = 75,21 km²
-| öppervlakte laand = 74,47 km²
-| öppervlakte water = 0,74 km²
+| öppervlakte = 75,21
+| öppervlakte laand = 74,47
+| öppervlakte water = 0,74
 | inwonners = 30.314
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 407
@@ -25,6 +25,7 @@ Andere dörpe en kernen in de gemeynde sint Bosschenhoofd, Hoeven, Oud Gastel, O
 
 == Uutgånde verwysing ==
 * [https://www.naamgemeynde.nl/ Officiele gemeyndewebsteade]
+
 {{Noord-Braobant}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
