[[:Kategorie:Prissentator]] weg-ehaald; [[:Kategorie:Nederlaands presentator]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Daphne_Bunskoek.mw
+++ b/Daphne_Bunskoek.mw
@@ -71,5 +71,5 @@ Van 1998 tot 2001 was see en stel med den [[Drèents|drentsken]] sanger [[Danië
 {{DEFAULTSORT:Bunskoek, Daphne}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Tukker]]
-[[Kategorie: Prissentator]]
+[[Kategorie:Nederlaands presentator]]
 [[Kategorie: Akteur]]
