Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Ommelanden.mw
+++ b/Ommelanden.mw
@@ -12,7 +12,7 @@
 | opvolgers = [[Stad en Lande|Provìnzie stad en Lande]]; [[Grunnen (provìnzie)|Provìnzie Grunnen]]
 | km2 = 1700 km²
 | inwoner = 
-| toalen = [[Grunnegs]], oorspronkelk [[Frais]]
+| toalen = [[Grunnegs]], oorspronkelk [[Freeske taaln|Frais]]
 | religie = 
 | feestdag = [[Pinkster]]
 | muntainhaid = [[Emdense Gulden]]
