*Empty MediaWiki Message*

--- a/Grunnegs_(grammoatiek).mw
+++ b/Grunnegs_(grammoatiek).mw
@@ -43,7 +43,7 @@ De '''grammoatiek van t Grunnegs''' is ain van de typisch-heden dij t [[Grunnegs
 |Heurent||dat van hen||theirs
 |}
 
-:<small>''<nowiki>*Oetsproken as [[oaznt]]</nowiki></small>
+:<small>''<nowiki>*Oetsproken as [[oaznt]]</nowiki>''</small>
 
 ==== Bezittelk veurnoamwoord ====
 t Bezittelk veurnoamwoord krigt man deur de -ent aachter dizze gentieven vot te hoalen. Zo krigt man t volgende liestke
@@ -210,12 +210,14 @@ Sums mout man de haile zin omgoeien om ''der'' te ontwieken en sums zulfs n hail
 === Spreektoal ===
 n Typische aigenschop van Grunnegers en Oostfraizen is dat man ien de spreektoal nait aaltied heur zinsorde goud het. Deurdat man gaauw proat en veul in körte tied zèggen wil, worden zinnen sumtieds nait haildaal ôfmoakt of zègt man dingen twij of drij moal ien ain zin.
 
-'''Dubbel waarkwoord'''<div>
+'''Dubbel waarkwoord'''
+
 ''"Mien man dij zee vanmörn nog, hai zègt "Ik heb guster even bie hom keken", zègt er."'' 
 
 Hier wordt drij moal n vörm van t waarkwoord "zèggen" broekt, wat normoalerwies overbodeg liekt. Ien de spreektoal is dat hail normoal.
 
-'''Dubbel liedend veurwaarp'''<div>
+'''Dubbel liedend veurwaarp'''
+
 ''"Ik wait der niks van, wat je aal zèggen"'' 
 
 Ien dizze zin wordt twij moal n liedend veurwaarp gebroekt "der" en "wat je aal zèggen". Dit komt deurdat man zèggen wil van "Ik wait der niks van", môr man het al deur dat de aander zèggen gaait van "Woar waitst doe niks van?", dus den beantwoordt man dij vroag direkt.
@@ -224,7 +226,8 @@ Ien dizze zin wordt twij moal n liedend veurwaarp gebroekt "der" en "wat je aal 
 
 Ien dizze zin wordt drij moal n liedend veurwaarp gebroekt, môr doarbie wordt t lèste dail van de zin verkört ien verlieken tou t Nederlaands. Ien t Nederlaands zol man zèggen ''"Mijn vader deed dat vroeger altijd, hij ging turf halen met de kruiwagen"''. Dat man "hij ging" der bie zet, heurt veur Grunnegers juust weer dubbel op.
 
-'''Zo was dat'''<div>
+'''Zo was dat'''
+
 ''"Vrouger was t zo, dat der kwam aaltied n schip mit boeskolen. Zo was dat aaltied."''
 
 Olle mìnsken dij over vrouger proaten, zèggen voak twij moal n vörm van "zo was dat". Dit zègt man om te benoadrokken dat dat doudestieds hail normoal was en dat zai dat echt mitmoakt hebben.
